--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
             href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css"
         />
 
-        <title>Yada</title>
+        <title>YADA</title>
     </head>
     <body>
         <noscript>You need to enable JavaScript to run this app.</noscript>
